<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Misterios"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="#AAAAFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_action_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/misterioNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Inicio"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollRosario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="50dp"
                android:text="@string/titulo"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tipoMisterios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:textSize="17sp"
                android:textStyle="italic"
                tools:text="Santo Rosario" />

            <Button
                android:id="@+id/leeme"
                style="?attr/materialIconButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                app:cornerRadius="30dp"
                android:drawableLeft="@drawable/ic_action_leer"
                app:backgroundTint="#0000DD" />

            <ImageView
                android:id="@+id/idImagen"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/idTituloRosario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Texto de ejemplo" />

            <TextView
                android:id="@+id/idMeditacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                android:theme="@style/texto"
                tools:text="Texto de ejemplo" />

            <TextView
                android:id="@+id/idContenidoRosario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                android:theme="@style/texto"
                tools:text="Texto de ejemplo" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="ca-app-pub-8408332664043957/5289519264"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:backgroundTint="#AAAAFF"
                app:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contadorAveMarias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp">

                    <TextView
                        android:id="@+id/avemaria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/aveMaria"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        ads:layout_constraintEnd_toStartOf="@id/numeroAveMaria"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/numeroAveMaria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numAaveMaria"
                        android:textColor="@color/black"
                        android:textSize="45sp"
                        app:layout_constraintStart_toEndOf="@id/avemaria"
                        ads:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/botonSiguienteAveMaria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:text="@string/botonAveMaria"
                        android:textColor="#FFF"
                        app:cornerRadius="20dp"
                        android:paddingHorizontal="25dp"
                        android:paddingVertical="5dp"
                        app:backgroundTint="#0000DD"
                        app:layout_constraintTop_toBottomOf="@id/numeroAveMaria"
                        app:layout_constraintEnd_toEndOf="parent"
                        ads:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/idContenidoRosario2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                android:theme="@style/texto"
                tools:text="Texto de ejemplo" />

            <Button
                android:id="@+id/botonSiguienteMisterio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="5dp"
                app:cornerRadius="20dp"
                android:text="@string/botonSiguiente"
                android:textColor="#FFF"
                app:backgroundTint="#0000DD" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>